
  * Emergency release to fix issues with release 0.9.6.
  * Fix a security issue with override_php.conf not being configured in apache, effectively disabling open_basedir restrictions. Closes: #1005
  * Show installation warning only once. Closes: #737
  * Make it possible to erase files and directories in file browser. Closes: #1002.
  * Fix mail accounts creation. Closes: #1003.

 -- Antoine Beaupré <anarcat@koumbit.org>  Fri, 12 Jan 2007 15:59:42 -0500

alternc (0.9.6) stable; urgency=high

  * Replacing C setuid scripts by perl-suid one. AlternC is now arch-indep !
  * Do not overwrite httpd.conf anymore. Everything is now done through includes in the /etc/apache/conf.d/ directory
  * Fix security issues with file browser and domain management that allowed an attacker to inspect the filesystem, create files in other accounts and perform cross site scripting javascript attacks. Credit: thabob.
  * #563: do not overwrite php.ini anymore. Everything is configured in the
    apache config.
  * All other bugs are postponed to 0.9.7 because of the security issue (hence
    urgency=high). See https://dev.alternc.org/trac/alternc/milestone/0.9.6
    for more information.

 -- Antoine Beaupré <anarcat@koumbit.org>  Mon, 27 Nov 2006 21:26:32 +0000

alternc (0.9.5) stable; urgency=low

  * maintenance release to fix packaging and security bugs
  * see https://dev.alternc.org/trac/alternc/milestone/0.9.5 for milestone
  * changelog at https://dev.alternc.org/trac/alternc/query?status=closed&milestone=0.9.5
  However, this version contains mainly :
  * quota management fixes
  * bind now forbid recursion and domain poisoning
  * now using po-debconf
  * mysql right management now included in the web desktop.
  * .eu tld domain is now allowed.
  * postfix is now using saslauthd with rimap for smtp sasl authentication

 -- Benjamin Sonntag <benjamin@alternc.org>  Thu,  4 May 2006 03:55:30 +0200

alternc (0.9.4) stable; urgency=low
