@@ -5,6 +5,9 @@ alternc (0.9.6.1) stable; urgency=high
   * Show installation warning only once. Closes: #737
   * Make it possible to erase files and directories in file browser. Closes: #1002.
   * Fix mail accounts creation. Closes: #1003.
+  * Fix a race condition in update_domains.sh which could allow users to
+    bypass openbasedir protection when creating domains. Reported by 
+    Jerome Moinet.
 
  -- Antoine Beaupré <anarcat@koumbit.org>  Fri, 12 Jan 2007 15:59:42 -0500
 
